# jupyterhub-scripts

./: README.md
images/: README.md
images/mover/: pyproject.toml  run.sh
images/mover/src/: main.py
images/scaler/: pyproject.toml  run.sh
images/scaler/src/: main.py
