[tool.poetry]
name = "webdav-image-scaler"
version = "1.0.1"
description = "This project improves the quality of images in webdav directories with a specific pattern."
authors = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
maintainers = ["Bervinov Oleg <bervinov.ob@gmail.com>"]
license = "MIT"
homepage = "https://github.com/obervinov/archive/jupyterhub/webdav-image-scaler"
repository = "https://github.com/obervinov/archive"
documentation = "https://github.com/obervinov/archive/jupyterhub/webdav-image-scaler/blob/main/README.md"
keywords = ["webdav", "script", "images", "pictures", "quality", "scale"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2"
webdavclient3 = "^3"
opencv-python = "^4"
logger = { git = "https://github.com/obervinov/logger-package.git", tag = "v2.0.4" }
vault  = { git = "https://github.com/obervinov/vault-package.git", tag = "v4.0.3" } 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
